28-06-2014
Version 0.1.8

[Feature] - Added pysed module replace and append

26-06-2014
Version 0.1.7

[Updated] - Fix step=0
[Feature] - Added '=' in options

26-06-2014
Version 0.1.6

[Feature] - Added step in print lines

25-06-2014
Version 0.1.5

[Updated] - Fix ignore char /
[Feature] - Added colors

20-06-2014
Version 0.1.4

[Updated] - Fix options, added print range lines
[Updated] - Fix functions

19-06-2014
Version 0.1.3

[Updated] - Fix options, include extract to print options

18-06-2014
Version 0.1.2

[Feature] - Added options and fix

17-06-2014
Version 0.1.1

[Updated] - Fix options

16-06-2014
Version 0.1.0

[Feature] - Added print lines

15-06-2014
Version 0.0.9

[Updated] - Fix errors arguments

15-06-2014
Version 0.0.8

[Updated] - Fix arguments
[Feature] - Added -e --extract text

14-06-2014
Version 0.0.7

[Feature] - Added convert text lowercase or uppercase

14-06-2014
Version 0.0.6

[Feature] - Added support windows os

14-06-2014
Version 0.0.5

[Feature] - Added max replace and max insert options

12-06-2014
Version 0.0.4

[Updated] - Include two options (-b, -n) in one (-i) 'insert text'

11-06-2014
Version 0.0.3

[Updated] - Source code, remove wasted code

11-06-2014
Version 0.0.2

[Updated] - Fix arguments

10-06-2014
Version 0.0.1

Released version 0.0.1, developmnet status Aplha