@@ -1,6 +1,6 @@
 Metadata-Version: 1.1
 Name: pysed
-Version: 0.1.8
+Version: 0.1.9
 Author: dslackw
 Author-email: d zlatanidis at gmail com
 Maintainer: dslackw
