@@ -1,4 +1,9 @@
 28-06-2014
+Version
+
+[Feature] - Added more modules
+
+28-06-2014
 Version 0.1.8
 
 [Feature] - Added pysed module replace and append
